<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="171dp"
    android:layout_marginBottom="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:background="@drawable/list_item_border">

        <ImageView
            android:id="@+id/item_list_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/productName"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_list_picture"
            app:layout_constraintTop_toTopOf="@+id/item_list_picture"
            android:textColor="@color/darkblue"/>

        <TextView
            android:id="@+id/item_list_productname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Deneme"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@color/pink"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/seller"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/item_list_productname"
            app:layout_constraintTop_toBottomOf="@+id/item_list_productname"
            android:textColor="@color/darkblue"/>

        <TextView
            android:id="@+id/item_list_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:textColor="@color/pink"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/price"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/item_list_picture"
            app:layout_constraintTop_toBottomOf="@+id/item_list_picture"
            android:textColor="@color/darkblue"/>

        <TextView
            android:id="@+id/item_list_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            android:textColor="@color/pink"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>